@@ -22,6 +22,8 @@ Version 1.3.1
 - BUG: Fix crashes on SMP systems. (Stefan)
 - BUG: Author, revision and date weren't always shown in the 
        'Check for modifications' dialog.
+- BUG: The "remote status" column could show "(property changes only)"
+       even if there were no property changes detected. (Stefan)
 
 Version 1.3.0
 - NEW: The settings dialog now has a button to open the system sound
